IT Manager/force-app/main/default/objects/IT_Asset__c/fields/Licenses_Available__c.field-meta.xml
<CustomField>
    <fullName>Licenses_Available__c</fullName>
    <description>Subtracts total used licenses from purchased</description>
    <formula>Licenses_Purchased__c -  Licenses_Used__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Licenses Available</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>