IT Manager/force-app/main/default/objects/IT_Asset__c/fields/Licenses_Purchased__c.field-meta.xml
<CustomField>
    <fullName>Licenses_Purchased__c</fullName>
    <description>Number of Licenses Purchased</description>
    <label>Licenses Purchased</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>