IT Manager/force-app/main/default/objects/IT_Asset__c/fields/Licenses_Used__c.field-meta.xml
<CustomField>
    <fullName>Licenses_Used__c</fullName>
    <description>Roll-up of all Active IT Asset Assignment records</description>
    <label>Licenses Used</label>
    <summaryFilterItems>
        <field>IT_Asset_Assignment__c.Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </summaryFilterItems>
    <summaryForeignKey>IT_Asset_Assignment__c.IT_Asset__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>