IT Manager/force-app/main/default/objects/IT_Asset__c/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <description>Model of the specific Asset</description>
    <label>Model</label>
    <length>55</length>
    <type>Text</type>
</CustomField>