IT Manager/force-app/main/default/objects/IT_Asset__c/fields/Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Serial_Number__c</fullName>
    <description>Asset Serial Number</description>
    <label>Serial Number</label>
    <length>55</length>
    <type>Text</type>
</CustomField>