IT Manager/force-app/main/default/objects/IT_Asset__c/fields/Vendor_Name__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Name__c</fullName>
    <description>Name of the Vendor</description>
    <label>Vendor Name</label>
    <length>55</length>
    <type>Text</type>
</CustomField>